# lite-anvil

./: .gitignore  BUILDING.md  Cargo.toml  LSP_SUPPORT.md  README.md  changelog.md  flake.nix  install.ps1  install.sh  mkdocs.yml  package.nix  release.sh  shell.nix
.github/workflows/: release.yml  test.yml
anvil-core/: Cargo.toml  build.rs
anvil-core/src/: freetype_hvf_stubs.c  lib.rs  runtime.rs  signal.rs  time.rs  window.rs
anvil-core/src/editor/: app_state.rs  buffer.rs  command_view.rs  commands.rs  commands_dispatch.rs  common.rs  config.rs  config_template.toml  context_menu.rs  doc_layout.rs  doc_ops.rs  doc_view.rs  draw_context.rs  empty_view.rs  error.rs  event.rs  event_loop.rs  filesystem.rs  git.rs  highlighter.rs  keymap.rs  log_view.rs  lsp.rs  lsp_client.rs  main_loop.rs  mod.rs  nag_view.rs  node_view.rs  picker.rs  plugins.rs  process.rs  regex.rs  scheduler.rs  status_view.rs  storage.rs  style.rs  style_ctx.rs  subsystems.rs  symbol_index.rs  syntax.rs  (+15 more)
anvil-core/src/renderer/: cache.rs  font.rs  mod.rs
data-nano/assets/syntax/: bash.json  c.json  cpp.json  css.json  dockerfile.json  env.json  go.json  html.json  ini.json  java.json  js.json  md.json  python.json  rust.json  sql.json  toml.json  tsx.json  typescript.json  xml.json  yaml.json
data-nano/assets/themes/: dark_default.json  default.json
data/colors/: dark_default.lua  default.lua  light_default.lua
data/core/: commandview.lua  config.lua  contextmenu.lua  dirwatch.lua  emptyview.lua  gitignore.lua  init.lua  keymap-macos.lua  keymap.lua  logview.lua  nagview.lua  node.lua  project.lua  rootview.lua  statusview.lua  style.lua  titleview.lua
data/plugins/: autoreload.lua  bracketmatch.lua  findfile.lua  language_bash.lua  language_crystal.lua  language_cs.lua  language_csv.lua  language_d.lua  language_fstab.lua  language_gleam.lua  language_go.lua  language_haskell.lua  language_java.lua  language_julia.lua  language_kotlin.lua  language_lisp.lua  language_makefile.lua  language_md.lua  language_meson.lua  language_ocaml.lua  language_postgresql.lua  language_powershell.lua  language_rust.lua  language_svelte.lua  language_toml.lua  language_ts.lua  language_tsx.lua  language_typescript.lua  language_vue.lua  language_yaml.lua  language_zig.lua  projectreplace.lua  projectsearch.lua  scale.lua  toolbarview.lua  treeview.lua  workspace.lua
docs/: 404.html  index.html  sitemap.xml
docs/about/: index.html
docs/api/: index.html
docs/guide/: index.html
docs/installation/: index.html
docs/screenshots/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs_src/: about.md  api.md  guide.md  index.md  installation.md  screenshots.md
docs_src/stylesheets/: extra.css
forge-core/: Cargo.toml
forge-core/src/: lua_vm.rs  main.rs  runtime.rs  window.rs
forge-core/src/api/: affordance_model.rs  autocomplete.rs  autoreload.rs  autorestart.rs  bracketmatch.rs  builtin_embeds.rs  colors.rs  command.rs  commands_command.rs  commands_contextmenu.rs  commands_core.rs  commands_dialog.rs  commands_doc.rs  commands_files.rs  commands_findreplace.rs  commands_log.rs  commands_root.rs  commands_statusbar.rs  commandview.rs  common.rs  config.rs  contextmenu.rs  detectindent.rs  dirwatch.rs  doc.rs  doc_module.rs  doc_native.rs  doc_search.rs  doc_translate.rs  docview.rs  drawwhitespace.rs  emptyview.rs  findfile.rs  folding.rs  git.rs  git_native.rs  git_plugin.rs  gitignore.rs  highlighter.rs  ime.rs  (+60 more)
forge-core/src/api/lua/: core.lua  docview.lua  utf8extra.lua
forge-core/src/editor/: dirmonitor.rs  dirwatch.rs  mod.rs
forge-core/src/editor/commands/: commands_command.rs  commands_contextmenu.rs  commands_core.rs  commands_doc.rs  commands_files.rs  commands_findreplace.rs  commands_git.rs  commands_root.rs  commands_statusbar.rs  mod.rs
forge-core/src/editor/doc/: doc.rs  doc_layout.rs  doc_module.rs  doc_search.rs  doc_translate.rs  docview.rs  mod.rs  symbol_index.rs
forge-core/src/editor/foundation/: builtin_embeds.rs  colors.rs  command.rs  common.rs  config.rs  highlighter.rs  keymap.rs  keymap_macos.rs  markdown.rs  mod.rs  modkeys_generic.rs  picker.rs  plugin_api.rs  regex.rs  regex_lua.rs  session.rs  storage.rs  storage_lua.rs  style.rs  syntax.rs  tokenizer.rs  tokenizer_shim.rs  utf8extra.rs  workspace.rs
forge-core/src/editor/plugins/: autocomplete.rs  autoreload.rs  autorestart.rs  bookmarks.rs  detectindent.rs  drawwhitespace.rs  findfile.rs  folding.rs  git.rs  git_view.rs  gitignore.rs  indentguide.rs  language_md.rs  lineguide.rs  linewrap.rs  linewrapping.rs  lsp_manager.rs  lsp_plugin_preloads.rs  lsp_protocol.rs  lsp_transport.rs  markdown_preview.rs  minimap.rs  mod.rs  plugin_macro.rs  process.rs  process_lua.rs  project_fs.rs  project_lua.rs  project_manifest.rs  project_model.rs  project_search.rs  projectreplace.rs  projectsearch.rs  quote.rs  reflow.rs  remotessh.rs  scale.rs  sortlines.rs  tabularize.rs  terminal.rs  (+5 more)
forge-core/src/editor/ui/: commandview.rs  contextmenu.rs  emptyview.rs  mod.rs  nagview.rs  node.rs  node_model.rs  root_model.rs  rootview.rs  scrollbar.rs  status_model.rs  statusview.rs  titleview.rs  toolbarview.rs  tree_model.rs  treeview.rs
forge-core/src/lua/: bootstrap.lua  runtime_setup.lua
forge-core/src/renderer/: cache.rs  mod.rs
gh-pages/: mkdocs.yml
gh-pages/docs/: about.md  guide.md  index.md  installation.md
lite-anvil/: Cargo.toml
lite-anvil/src/: main.rs
nano-anvil/: Cargo.toml  build.rs
nano-anvil/src/: main.rs
resources/linux/: AppRun  com.lite_anvil.LiteAnvil.desktop  com.nano_anvil.NanoAnvil.desktop
resources/macos/: Info.plist
resources/windows/: install-file-associations.ps1  uninstall-file-associations.ps1
scripts/: build-docs.sh  build-local-linux.sh  build-local-mac.sh  build-local-win.ps1  build-sdl3-nogl.sh  install-mac.sh
scripts/innosetup/: innosetup.iss.in
src/: window.rs
src/editor/: buffer.rs  doc_ops.rs  doc_view.rs  keymap.rs  lsp_client.rs  mod.rs  native_loop.rs  terminal.rs  terminal_buffer.rs  terminal_panel.rs  terminal_windows.rs
(+24 files in other folders)
