[package]
name = "lite-anvil"
version = "2.1.0"
edition = "2024"
rust-version = "1.85"
description = "A lightweight code editor built in Rust with SDL3"
license = "MIT"

[package.metadata.deb]
name = "lite-anvil"
maintainer = "Lite-Anvil contributors"
copyright = "MIT"
extended-description = "A lightweight code editor built in Rust with SDL3."
depends = "libsdl3-0, libfreetype6, libpcre2-8-0"
section = "editors"
priority = "optional"
assets = [
    ["target/release/lite-anvil", "usr/bin/", "755"],
    ["data/**/*",                 "usr/share/lite-anvil/", "644"],
    ["resources/linux/com.lite_anvil.LiteAnvil.desktop",
                                  "usr/share/applications/lite-anvil.desktop", "644"],
]

[[bin]]
name = "lite-anvil"
path = "src/main.rs"

[features]
default = ["sdl"]
sdl = ["dep:sdl3-sys"]

[dependencies]
sdl3-sys = { version = "0.6", features = ["use-pkg-config", "use-vcpkg"], optional = true }
fontdue = "0.9.3"
freetype = "0.7.2"
notify = "8.2.0"
pcre2 = "0.2.11"
pulldown-cmark = { version = "0.12", default-features = false }
png = "0.17"
libc = "0.2.182"
bitflags = "2.11.0"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
anyhow = "1.0.102"
once_cell = "1.21.3"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
