[package]
name = "anvil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared core library for Lite-Anvil and Nano-Anvil editors"

[features]
default = ["sdl"]
sdl = ["dep:sdl3-sys"]

[dependencies]
sdl3-sys = { version = "0.6", features = ["use-pkg-config", "use-vcpkg"], optional = true }
fontdue = "0.9.3"
freetype = "0.7.2"
notify = "8.2.0"
pcre2 = "0.2.11"
pulldown-cmark = { version = "0.12", default-features = false }
png = "0.17"
libc = "0.2.182"
bitflags = "2.11.0"
log = "0.4.29"
env_logger = "0.11.9"
thiserror = "2.0.18"
anyhow = "1.0.102"
once_cell = "1.21.3"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"

[build-dependencies]
cc = "1"
